Tela de lsita de unidades v 1.0.0 finalizada.

--- a/PathfindersClubApp/PathfindersClubApp/Views/MainPage.xaml
+++ b/PathfindersClubApp/PathfindersClubApp/Views/MainPage.xaml
@@ -58,7 +58,8 @@
                 <Frame Grid.Column="1">
                     <Grid>
                         <ImageButton BackgroundColor="#387bc1"                        
-                                     Source="main_unidades.png"/>
+                                     Source="main_unidades.png"
+                                     Command="{Binding NavigateToUnitListPageCommand}"/>
                         <Label Text="Unidades" />
                     </Grid>
                 </Frame>
